deploy angular 7 app to heroku

--- a/src/app/top-menu/top-menu.component.html
+++ b/src/app/top-menu/top-menu.component.html
@@ -137,11 +137,11 @@
       </a>
       <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in" [class.show]="estOuvert"
         aria-labelledby="userDropdown">
-        <button class="dropdown-item" routerLink="/profile" (click)="getInfo()">
+        <button class="dropdown-item" routerLink="/profile">
           <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
           Mon Profil
         </button>
-        <button class="dropdown-item" routerLink="/settings" (click)="setInfo()">
+        <button class="dropdown-item" routerLink="/settings">
           <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>
           Paramètres
         </button>
